# t1_wbc

./: .gitignore  README.md  pyproject.toml
docs/: BRINGUP-hardware.md
docs/superpowers/plans/: 2026-06-16-t1-wbc-foundation-numpy-proxsuite.md  2026-06-16-t1-wbc-hardware-2a-estimator-transport.md  2026-06-16-t1-wbc-hardware-2b-sdk-safety.md
docs/superpowers/specs/: 2026-06-16-t1-wbc-hardware-2a-estimator-transport-design.md  2026-06-16-t1-wbc-hardware-deployment-design.md
scripts/: capture_golden_qp.py
src/t1_wbc/: __init__.py  _assets.py  action_backend.py  config.py  controller.py  dynamics.py  dynamics_warp.py  estimator.py  joint_map.py  logging_utils.py  model.py  reference.py  run.py  safety.py  sdk_transport.py  solver.py  targets.py  transport.py  wbc_qp.py
src/t1_wbc/assets/: motion_plan.pkl  motion_plan_h00cm.pkl  motion_plan_h10cm.pkl  motion_plan_h20cm.pkl  motion_plan_h30cm.pkl  motion_plan_h40cm.pkl  motion_plan_h50cm.pkl
src/t1_wbc/assets/robot/: t1.xml
tests/t1_wbc/: conftest.py  test_controller.py  test_dynamics.py  test_estimator.py  test_hw_hold.py  test_hw_pacing.py  test_hw_safe_sim.py  test_joint_map.py  test_motion_segments.py  test_no_heavy_deps.py  test_qp_equivalence.py  test_regression_track.py  test_run_cli.py  test_safety.py  test_sdk_transport.py  test_solver.py  test_state_assembly.py  test_track_estimated.py  test_track_threaded.py  test_transport.py
tests/t1_wbc/fixtures/: golden_qp.npz
