[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "t1_wbc"
version = "0.1.0"
description = "Self-contained whole-body QP controller for the Booster T1"
requires-python = ">=3.10"
dependencies = ["numpy", "mujoco==3.6.0", "scipy", "proxsuite>=0.7.3"]

[project.optional-dependencies]
hardware = ["booster-robotics-sdk"]   # exact name resolved in the hardware plan
dev = ["pytest"]

[project.scripts]
t1-wbc = "t1_wbc.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
t1_wbc = ["assets/robot/t1.xml", "assets/robot/meshes/*", "assets/motion_plan.pkl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
